corrected borders and refined styling on mobile devices via media queries

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 }
 
 * {
-    border: 2px dashed black;
+    /* border: 2px dashed black; */
     margin: 5px;
     padding: 15px 20px 10px;
     /* background-color: var(--light); */
@@ -266,6 +266,21 @@ input[type=submit]:hover {
         flex-basis: 100%;
         height:auto 
     }*/
+    * {
+        margin: 5px;
+        padding: 6px 6px 5px 5px;
+        font-size: 12px;
+    }
+    header, h1 {
+        font-size: 30px;
+    }
+    nav {
+        justify-content: center;
+    }
+  
+    h2 {
+        font-size: 18px;
+    }
     .project-item, .project-item-first-child {
         display: flex;
         flex-direction: column;
